uni-registrar-driver-did-oyd/kubernetes/registrar-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oydid
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registrar
  namespace: oydid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registrar
  template:
    metadata:
      name: registrar
      labels:
        app: registrar
    spec:
      containers:
      - name: registrar
        image: oydeu/oydid-registrar:250503a  
        ports:
        - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: registrar
  namespace: oydid
spec:
  selector:
    app: registrar
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registrar
  namespace: oydid
  annotations:
    certmanager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - oydid-registrar.data-container.net
    secretName: registrar-tls
  rules:
  - host: oydid-registrar.data-container.net
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: registrar
            port:
              number: 80
